# telegram-scraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  gen_string_session.py  list_chats.py  pyproject.toml  requirements.txt  tg_chat_scrape.py
postgres/: schema.sql
